<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_sm"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md">

        <TextView
            android:id="@+id/tv_review_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_review_not_recorded"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_sm"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/tv_review_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:text="Question"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_md"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/tv_review_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/quiz_review_selected_format"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_sm" />

        <TextView
            android:id="@+id/tv_review_correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/quiz_review_correct_format"
            android:textColor="@color/quiz_correct"
            android:textSize="@dimen/text_sm" />

        <TextView
            android:id="@+id/tv_review_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/quiz_review_explanation_format"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_sm" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
